A.F....... [ZBXNEXT-1426] added initial Persian translation (Richlv)
A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)

Bug fixes:
....I..... [ZBX-5125] fixed possible SQL errors while upgrading DB (dimir, Sasha)
....I..... [ZBX-5415] fixed check for PostgreSQL dev libraries (Sasha)
A......... [ZBX-5740] removed "discoveryids" parameter from CItem, CTrigger and CGraph get() methods (Toms)
A......... [ZBX-5740] fixed CItemPrototype parameter "selectTriggers" not working (Toms)
A......... [ZBX-5111] fixed child trigger data reset after changes in parent trigger (Oleg)
A......... [ZBX-5742] fixed trigger order_result in item and item prototype (Oleg)
..F....... [ZBX-5754] fixed English strings in trigger expression helper (Oleg)
..F....... [ZBX-5700] added permission checks in frontend (Oleg)
..F....... [ZBX-5700] fixed error after image deleting (Oleg)
..F....... [ZBX-5700] fixed duplicates in audit log after deleting (Oleg)
..F....... [ZBX-5700] fixed spaces in audit log (Oleg)
..F....... [ZBX-4186] added permission checks in media types (Oleg)
..F....... [ZBX-4185] added permission checks in user groups (Oleg)
..F....... [ZBX-5637] changed form, functions description and parameters in trigger expression helper (popup_trexpr.php) and changed popup size (Oleg)
..F....... [ZBX-5603] fixed already defined constant error when db is unavailable (Vedmak)
..F....... [ZBX-5720] fixed incorrect error when deleting internal host group (Vedmak)
A......... [ZBX-5643] fixed SQL error by adding permission check for triggers when adding nonexistent dependencies via API (Toms)
A......... [ZBX-5643] fixed circularity check for trigger addDependencies() in API (Toms)
..F....... [ZBX-5691] fixed error when creating graph if Oracle configured to use comma as decimal separator (Vedmak)